# image_qna_exp

./: README.md  image_qna_0.py  pyproject.toml
img_qna/: get_img_qna_response.py  img_qna_cv.py  img_qna_cv_1.py
