[project]
name = "image-qna"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "altair>=5.5.0",
    "google-genai>=1.9.0",
    "opencv-python>=4.11.0.86",
    "pandas>=2.2.3",
    "pillow<10",
    "python-dotenv>=1.1.0",
    "streamlit-image-coordinates>=0.2.1",
    "streamlit==1.25.0",
    "streamlit-drawable-canvas>=0.9.3",
]
